# datalink-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/datalink_client/: __init__.py  cli.py  client.py  protocol.py  time_utils.py
tests/: test_client.py  test_protocol.py  test_time_utils.py
